--- a/index.html
+++ b/index.html
@@ -667,13 +667,13 @@
                             <input type="date" name="Дата прибытия" class="input-date">
                         </div>
                         <div class="blog-form-description">
-                            <p class="form-descriotion">
+                            <p class="form-description">
                                 Ночей
                             </p>
                             <input type="number" min="0" name="Ночей" class="input-number">
                         </div>
                         <div class="blog-form-description">
-                            <p class="form-descriotion">
+                            <p class="form-description">
                                 Туристы
                             </p>
                             <input type="number" min="0" name="Туристы" class="input-number">
@@ -690,40 +690,50 @@
                 <h2 class="section-title contact-title">
                     Контакты
                 </h2>
-                <div class="container-contacts">
-                    <address>
+                <div class="container-contacts flex">
+                    <address class="contacts-address">
                         <ul class="list-resert container-contacts-list">
-                            <li class="container-contacts-item">
+                            <li class="container-contacts-item flex">
                                 <strong class="contacts-item-caption">
                                     Адрес
                                 </strong>
-                                <p class="contacts-item-description">
+                                <p class="contacts-item-description-address">
                                     Москва, улица Юности, дом 5&nbsp;строение&nbsp;4, офис&nbsp;2
                                 </p>
                             </li>
-                            <li class="container-contacts-item">
+                            <li class="container-contacts-item flex">
                                 <strong class="contacts-item-caption">
                                     Телефоны
                                 </strong>
-                                <a href="tel:+74995356434" class="contacts-item-tel-link">
-                                    +7 (499) 535-64-34</a>
-                                <a href="tel:+74950050544" class="contacts-item-tel-link">
-                                    +7 (495) 005-05-44</a>
+                                <div class="contacts-item-tel">
+                                    <a href="tel:+74995356434" class="contacts-item-tel-link">
+                                        +7 (499) 535-64-34
+                                    </a>
+                                    <a href="tel:+74950050544" class="contacts-item-tel-link">
+                                        +7 (495) 005-05-44
+                                    </a>
+                                </div>
                             </li>
-                            <li class="container-contacts-item">
+                            <li class="container-contacts-item flex">
                                 <strong class="contacts-item-caption">
                                     E-mail
                                 </strong>
-                                <a href="mailto:lg.oona@mail.ru" class="contacts-item-mailto-link">
-                                    lg.oona@mail.ru</a>
-                                <p class="contacts-item-text_transparent">
-                                    по&nbsp;вопросам бронирования</p>
-                                <a href="mailto:hotels.ln@mail.ru" class="contacts-item-mailto-link">
-                                    hotels.ln@mail.ru</a>
-                                <p class="contacts-item-text_transparent">
-                                    по&nbsp;вопросам сотрудничества"</p>
+                                <div class="contacts-item-email">
+                                    <a href="mailto:lg.oona@mail.ru" class="contacts-item-mailto-link">
+                                        lg.oona@mail.ru
+                                    </a>
+                                    <p class="contacts-item-text_transparent">
+                                        по&nbsp;вопросам бронирования
+                                    </p>
+                                    <a href="mailto:hotels.ln@mail.ru" class="contacts-item-mailto-link">
+                                        hotels.ln@mail.ru
+                                    </a>
+                                    <p class="contacts-item-text_transparent">
+                                        по&nbsp;вопросам сотрудничества
+                                    </p>
+                                </div>
                             </li>
-                            <li class="container-contacts-item">
+                            <li class="container-contacts-item flex">
                                 <strong class="contacts-item-caption">
                                     График
                                 </strong>
@@ -732,11 +742,13 @@
                                 </p>
                             </li>
                         </ul>
-                        <button class="btn-reset contacts-btm">
+                        <button class="btn-reset btn contacts-btm">
                             Построить маршрут
                         </button>
-                        <img src="./img/1.Contact.jpg" class="contact-logo" alt="Lagoona reception">
                     </address>
+                    <div class="contacts-img">
+                        <img src="./img/1.Contact.jpg" class="contact-logo" alt="Lagoona reception"> 
+                    </div>
                 </div>
             </div>
         </section>
