--- a/index.html
+++ b/index.html
@@ -754,47 +754,66 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container"> <!--Ограничу им ширину контента-->
+        <div class="container footer-container flex"> <!--Ограничу им ширину контента-->
+            <img class="frame-san" src="./img/Frame-san.png" alt="Frame-san">
             <div class="footer-left">
-                <p class="footer-text">
-                    &copy;&nbsp;2012-2020 Управляющая компания Объединенной сети &laquo;Лагуна Хотелс&raquo;</p>
-                <p class="footer-text">
+                <p class="footer-text footer-text-up">
+                    &copy;&nbsp;2012-2020 Управляющая компания Объединенной сети &laquo;Лагуна Хотелс&raquo;
+                </p>
+                <p class="footer-text footer-text-down">
                     Представленная на&nbsp;сайте информация носит справочный характер и&nbsp;не&nbsp;является публичной офертой
                 </p>
                 <a href="#" class="footer-link">
-                    Пользовательское соглашение</a>
+                    Пользовательское соглашение
+                </a>
             </div> <!--end footer LEFT-->
             
-            <div class="footer-center">
-                <p class="footer-text">
-                    11710, улица Юности, дом 5&nbsp;строение&nbsp;4, офис&nbsp;2
-                </p>
-                <a href="tel:+74995356434" class="contacts-item-tel-link">
-                    +7 (499) 535-64-34</a>
-                <a href="tel:+74950050544" class="contacts-item-tel-link">
-                    +7 (495) 005-05-44</a>
-                <a href="mailto:lg.oona@mail.ru" class="contacts-item-mailto-link">
-                    lg.oona@mail.ru</a>
-                <a href="mailto:hotels.ln@mail.ru" class="contacts-item-mailto-link">
-                    hotels.ln@mail.ru</a>
+            <div class="footer-center flex">
+                <div>
+                   <p class="footer-text footer-text-center">
+                        11710, улица Юности, дом 5&nbsp;строение&nbsp;4, офис&nbsp;2
+                    </p>
+                    <a href="tel:+74995356434" class="contacts-item-tel-link">
+                        +7 (499) 535-64-34
+                    </a>
+                    <a href="tel:+74950050544" class="contacts-item-tel-link">
+                        +7 (495) 005-05-44
+                    </a>
+                    <a href="mailto:lg.oona@mail.ru" class="contacts-item-mailto-link">
+                        lg.oona@mail.ru
+                    </a>
+                    <a href="mailto:hotels.ln@mail.ru" class="contacts-item-mailto-link">
+                        hotels.ln@mail.ru
+                    </a> 
+                </div>
             </div> <!--ebd footer CENTER-->
             
             <div class="footer-right">
                 <ul class="list-resert social-list">
                     <li class="social-icon">
-                        <a class="social-icon-tripadvisor" href="https://tripadvisor.ru"></a>
+                        <a class="social-icon-tripadvisor" href="https://tripadvisor.ru">
+                            <img src="./img/TripAdvisor.png" alt="TripAdvisor">
+                        </a>
                     </li>
                     <li class="social-icon">
-                        <a class="social-icon-twitter" href="https://twitter.com"></a>
+                        <a class="social-icon-twitter" href="https://twitter.com">
+                            <img src="./img/Twitter.png" alt="Twitter">
+                        </a>
                     </li>
                     <li class="social-icon">
-                        <a class="social-icon-fb" href="https://www.facebook.com"></a>
+                        <a class="social-icon-fb" href="https://www.facebook.com">
+                            <img src="./img/Facebook.png" alt="Facebook">
+                        </a>
                     </li>
                     <li class="social-icon">
-                        <a class="social-icon-vk" href="https://vk.com"></a>
+                        <a class="social-icon-vk" href="https://vk.com">
+                            <img src="./img/VKontakte.png" alt="VKontakte">
+                        </a>
                     </li>
                     <li class="social-icon">
-                        <a class="social-icon-inst" href="https://instagram.com"></a>
+                        <a class="social-icon-inst" href="https://instagram.com">
+                        <img src="./img/Instagram.png" alt="Instagram">
+                        </a>
                     </li>
                 </ul>
             </div> <!--footer RIGHT end-->
