add nth-child hover affect transition custom properties and favicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--width=device-width - ширина сайта будет ровняться экрану девайса-->
     <!--initial-scale=1.0 - изначальный масштаб 1,0 (100%) или как есть-->
     <title>Lagoona</title> <!--показывает - о чём наш сайт-->
+    <link rel ="icon" type ="image / png" href = "./img/Favicon.png" sizes = "25x25">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -742,7 +743,7 @@
                                 </p>
                             </li>
                         </ul>
-                        <button class="btn-reset btn contacts-btm">
+                        <button class="btn-reset btn contacts-btn">
                             Построить маршрут
                         </button>
                     </address>
